2012-08-30  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-decls.cc(TypeInfoDeclaration::toSymbol): Mark all typeinfo decls
	as 'used'.
	* d-glue.cc(one_elem_array): Remove.
	(CatExp::toElem): Inline use of one_elem_array, clean-up.
	* d-objfile.cc(ObjectFile::setupSymbolStorage): Update to better
	handle use of declarations marked with comdat, extern or static.
	(ObjectFile::doSimpleFunction): Mark function as 'used'.
	* dt.cc(dt2node): Clean-up indentation.
	* Make-lang.in: Fix issue with cross-compiler configuration.

2012-08-29  Iain Buclaw  <ibuclaw@ubuntu.com>

	* lang-specs.h: Remove special case for handled D source files.
	* Make-lang.in: Remove special case for building gcc.o, use
	GCC_EXTRA_LIBS to link against, rather than specific gcc object files.
	(D_DRIVER_NAME): Remove use of variable.
	(D_DRIVER_OBJS): Likewise.
	(D_COMPILER_NAME): Likewise.

2012-08-23  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-builtins2.cc(eval_builtin): Use builtin_decl_explicit.
	* d-codegen.cc(IRState::emitLocalVar): Use warning.
	(IRState::convertTo): Likewise.
	(IRState::addressOf): Use IRState::markAddressable.
	(IRState::markAddressable): New function.
	(IRState::markUsed): New function.
	(IRState::markRead): New function.
	(IRState::maybeExpandSpecialCall): Use builtin_decl_explicit.
	(IRState::floatMod): Likewise.
	(IRState::exceptionObject): Likewise.
	* d-glue.cc(IdentityExp::toElem): Likewise.
	(EqualExp::toElem): Likewise.
	(PowExp::toElem): Likewise.
	(AssignExp::toElem): Likewise.
	(HaltExp::toElem): Likewise.
	(ArrayLiteralExp::toElem): Likewise.
	(FuncDeclaration::toObjFile): Likewise.
	* d-lang.cc(d_mark_addressable): Remove function.
	(d_mark_exp_read): Remove function.
	* d-lang.h(d_warning): Remove macro.
	(d_built_in_decls): Remove macro.
	* d-objfile.cc(Obj::includelib): Use warning.
	(Obj::startaddress): Likewise.

2012-08-22  Iain Buclaw  <ibuclaw@ubuntu.com>

	* d-lang.cc(binary): Moved function from frontend.