@@ -55,6 +55,9 @@ version( GNU )
      * Retrieve and store through parmn the next value that is of TypeInfo ti.
      * Used when the static type is not known.
      */
+    void va_arg()(ref va_list ap, TypeInfo ti, void* parmn);
+
+
   version( X86_64 )
   {
     // Layout of this struct must match __gnuc_va_list for C ABI compatibility
@@ -86,7 +89,7 @@ version( GNU )
                 bool stack = false;
                 auto offset_fpregs_save = ap.offset_fpregs;
                 auto offset_regs_save = ap.offset_regs;
-L1:
+            L1:
                 if (inXMMregister(arg1) || v1)
                 {   // Passed in XMM register
                     if (ap.offset_fpregs < (6 * 8 + 16 * 8) && !stack)
@@ -176,6 +179,36 @@ L1:
         else
         {
             assert(false, "not a valid argument type for va_arg");
+        }
+    }
+  }
+  else version( ARM )
+  {
+    version( ARM_EABI )
+    {
+        // Layout of this struct must match __gnuc_va_list for C ABI compatibility
+        struct __va_list
+        {
+            void* ptr;
+        }
+
+        void va_arg()(ref va_list apx, TypeInfo ti, void* parmn)
+        {
+            __va_list* ap = cast(__va_list*)apx;
+            auto p = ap.ptr;
+            auto tsize = ti.tsize();
+            ap.ptr = cast(va_list)( cast(void*) p + ( ( tsize + size_t.sizeof - 1 ) & ~( size_t.sizeof - 1 ) ) );
+            parmn[0..tsize] = p[0..tsize];
+        }
+    }
+    else
+    {
+        void va_arg()(ref va_list ap, TypeInfo ti, void* parmn)
+        {
+            auto p = ap;
+            auto tsize = ti.tsize();
+            ap = cast(va_list)( cast(void*) p + ( ( tsize + size_t.sizeof - 1 ) & ~( size_t.sizeof - 1 ) ) );
+            parmn[0..tsize] = p[0..tsize];
         }
     }
   }
